--- a/_posts/2015-11-01-dasom-1.0.1-release-note.md
+++ b/_posts/2015-11-01-dasom-1.0.1-release-note.md
@@ -17,6 +17,7 @@ And this post is a release note for that.
   * f9f9f9 (2.5% gray) --> f2f2f2 ( 5% gray)
   * ffffff (black) --> 1a1a1a (90% gray)
 
-[Click here to get Dasom 1.0.1 <https://github.com/cogniti/dasom/releases/tag/1.0.1>](https://github.com/cogniti/dasom/releases/tag/1.0.1)
+Get Dasom 1.0.1
+[https://github.com/cogniti/dasom/releases/tag/1.0.1](https://github.com/cogniti/dasom/releases/tag/1.0.1)
 
 Note: Future Dasom releases will be available at [https://github.com/dasom-im/dasom/releases/](https://github.com/cogniti/dasom/releases/tag/1.0.1)
