--- a/_posts/2015-10-25-dasom-1.0.1-release-note.md
+++ b/_posts/2015-10-25-dasom-1.0.1-release-note.md
@@ -1,14 +1,16 @@
 ---
 layout: post
 title:  "Dasom 1.0.1 Release Note"
-date:   2015-11-01
+date:   2015-10-25
 tags: new-release
 author : Youngbin Han
 ---
 
-Dasom 1.0.1 was released (at 2015.10.25).
+Dasom 1.0.1 was released today.
 
-And this post is a release note for that.
+Thanks to many bug reports from users, This release includes many improvements.
+
+## What's new in 1.0.1
 
 * Fixed race condition
 * Dubeolsik: Compose double consonants only with shift key by default
