--- a/_posts/2015-10-25-dasom-1.0.1-release-note.md
+++ b/_posts/2015-10-25-dasom-1.0.1-release-note.md
@@ -1,27 +1,22 @@
 ---
 layout: post
-title:  "Dasom 1.0.1 Release Note"
+title:  "Dasom 1.0.1 Released"
 date:   2015-10-25
 tags: new-release
-author : Youngbin Han
 ---
 
-Dasom 1.0.1 was released today.
+Thanks to many bug reports from users
 
-Thanks to many bug reports from users, This release includes many improvements.
+### Changes in version 1.0.1
 
-## What's new in 1.0.1
-
-* Fixed race condition
-* Dubeolsik: Compose double consonants only with shift key by default
-* Fixed CapsLock
-* Fixed event hooking
-* Fixed compatibility issue with Qt 5.5
-* Modified icon brightness
-  * f9f9f9 (2.5% gray) --> f2f2f2 ( 5% gray)
-  * ffffff (black) --> 1a1a1a (90% gray)
+  * Fixed race condition (closes #18)
+  * Dubeolsik: Compose double consonants only with shift key by default (closes #13)
+  * Fixed CapsLock (closes #15 #16)
+  * Fixed event hooking (closes #9)
+  * Fixed compatibility issue with Qt 5.5 (closes #11)
+  * Modified icon brightness
+    - f9f9f9 (2.5% gray) --> f2f2f2 ( 5% gray)
+    - ffffff (black)     --> 1a1a1a (90% gray)
 
 Get Dasom 1.0.1
 [https://github.com/cogniti/dasom/releases/tag/1.0.1](https://github.com/cogniti/dasom/releases/tag/1.0.1)
-
-Note: Future Dasom releases will be available at [https://github.com/dasom-im/dasom/releases/](https://github.com/cogniti/dasom/releases/tag/1.0.1)
